fixed layout issues on add task / edit task modals

--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -91,45 +91,52 @@
 	border-radius: 6px 6px 5px 5px;
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-start;
+	justify-content: space-between;
 	align-items: center;
 	position: relative;
 
+	.add-task-modal-header {
+		height: 5%;
+		width: 100%;
+		p {
+			font-size: 1.2rem;
+		}
+	}
+
 	.add-task-modal-body {
-		height: 100%;
+		height: 85%;
 		width: 100%;
 		display: flex;
 		flex-direction: column;
 		flex-wrap: nowrap;
-		justify-content: flex-start;
+		justify-content: space-between;
 		align-items: center;
 
-		.add-modal-body-item {
+		.add-task-modal-body-item {
 			width: 100%;
-			height: auto;
-			margin-bottom: 1rem;
 			display: flex;
 			flex-direction: column;
-			flex-wrap: nowrap;
 			justify-content: flex-start;
 			align-items: flex-start;
+			flex-wrap: nowrap;
 
-			.add-task-modal-header {
-				font-weight: 500;
+			p {
 				margin-bottom: .2rem;
 			}
 		}
 
+		.add-task-title-container {
+			height: 15%;
+		}
+
 		.new-task-assigned-users-container {
 			height: 40%;
-			width: 100%;
 			
 			.new-task-assigned-users {
 				height: 100%;
 				width: 100%;
 				overflow: auto;
 				border: 1px solid lightgray;
-
 
 				.new-task-assigned-user {
 					width: 100%;
@@ -161,6 +168,15 @@
 			}
 		}
 	}
+
+	.add-task-modal-footer {
+		height: 10%;
+		width: 100%;
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-items: flex-end;
+	}
 }
 
 .edit-list-modal {
@@ -181,12 +197,12 @@
 		flex-direction: row;
 		justify-content: flex-start;
 		align-items: center;
-		padding: 1rem;
+		padding: 0 1rem;
 		border-radius: 5px 5px 0px 0px;
 	}
 	
 	.edit-modal-body {
-		height: 100%;
+		height: calc(100% - 2.5rem);
 		width: 100%;
 		padding: 1rem;
 		display: flex;
