--- a/src/components/Task/Task.scss
+++ b/src/components/Task/Task.scss
@@ -67,7 +67,7 @@
 	border-radius: 6px 6px 5px 5px;
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-start;
+	justify-content: space-between;
 	align-items: center;
 	position: relative;
 	
@@ -78,8 +78,9 @@
 		flex-direction: row;
 		justify-content: flex-start;
 		align-items: center;
-		padding: 1rem;
+		padding: 0 1rem;
 		border-radius: 5px 5px 0px 0px;
+		text-align: left;
 	}
 	
 	.edit-task-modal-body {
@@ -93,30 +94,26 @@
 		align-items: center;
 
 		.edit-task-title{
+			height: 15%;
 			width: 100%;
-			height: auto;
 			max-height: 4rem;
-			margin-bottom: 1rem;
 			display: flex;
 			flex-direction: column;
 			flex-wrap: nowrap;
 			justify-content: flex-start;
 			align-items: flex-start;
+			margin-bottom: .5rem;
 		}
 
 		.task-assigned-users-container {
+			height: 35%;
 			width: 100%;
-			height: 50%;
 			max-height: 15rem;
 			display: flex;
 			flex-direction: column;
 			justify-content: flex-start;
 			align-items: flex-start;
 			margin-bottom: .5rem;
-
-			h4 {
-				margin-bottom: 6px;
-			}
 
 			.task-assigned-users {
 				height: 100%;
@@ -149,18 +146,14 @@
 		}
 
 		.task-notes-container {
+			height: 35%;
 			width: 100%;
-			height: 50%;
 			max-height: 15rem;
 			display: flex;
 			flex-direction: column;
 			justify-content: flex-start;
 			align-items: flex-start;
 			margin-bottom: .5rem;
-
-			h4 {
-				margin-bottom: 6px;
-			}
 
 			textarea {
 				width: 100%;
@@ -172,6 +165,7 @@
 		}
 		
 		.edit-modal-buttons {
+			height: 10%;
 			width: 100%;
 			position: absolute;
 			bottom: 0;
